--- a/공공데이터.ipynb
+++ b/공공데이터.ipynb
@@ -266,13 +266,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -569,8 +562,219 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q. 성분 안내서 같은 건 어디있지? "
+    "# Q. 성분 안내서 같은 건 어디있지?  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CTPRV_CD</th>\n",
+       "      <th>SGNG_CD</th>\n",
+       "      <th>EMNDN_CD</th>\n",
+       "      <th>CLZN_CD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>49</td>\n",
+       "      <td>49720</td>\n",
+       "      <td>49720250</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>49</td>\n",
+       "      <td>49720</td>\n",
+       "      <td>49720250</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49</td>\n",
+       "      <td>49720</td>\n",
+       "      <td>49720250</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49</td>\n",
+       "      <td>49720</td>\n",
+       "      <td>49720250</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>49720</td>\n",
+       "      <td>49720250</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CTPRV_CD  SGNG_CD  EMNDN_CD  CLZN_CD\n",
+       "0        49    49720  49720250      4.0\n",
+       "1        49    49720  49720250      4.0\n",
+       "2        49    49720  49720250      4.0\n",
+       "3        49    49720  49720250      NaN\n",
+       "4        49    49720  49720250      4.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "test_file = pd.read_excel('climate_jeju.xlsx')\n",
+    "df = pd.DataFrame(test_file)\n",
+    "\n",
+    "df[['CTPRV_CD','SGNG_CD','EMNDN_CD','CLZN_CD']].head()    # index 0,1,2,17 : 시도/시군구/읍면동/기후대 코드  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2686 entries, 0 to 2685\n",
+      "Data columns (total 86 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   CTPRV_CD    2686 non-null   int64  \n",
+      " 1   SGNG_CD     2686 non-null   int64  \n",
+      " 2   EMNDN_CD    2686 non-null   int64  \n",
+      " 3   CMBLC_ID    2686 non-null   int64  \n",
+      " 4   SBLT_ID     2686 non-null   int64  \n",
+      " 5   SMAR_NO     2686 non-null   int64  \n",
+      " 6   SLTP_CD     2686 non-null   int64  \n",
+      " 7   STQLT_CD    0 non-null      float64\n",
+      " 8   MPDMR_NO    2686 non-null   int64  \n",
+      " 9   STNDA_NMPL  2646 non-null   object \n",
+      " 10  MPDMR_NM    2646 non-null   object \n",
+      " 11  FLGHT_PHTG  2646 non-null   object \n",
+      " 12  EXMNE_NM    2646 non-null   object \n",
+      " 13  EXMNN_AREA  2686 non-null   float64\n",
+      " 14  RHGLT_GGRP  2686 non-null   int64  \n",
+      " 15  WTHR_CD     2686 non-null   int64  \n",
+      " 16  TPGRP_TPCD  2517 non-null   float64\n",
+      " 17  CLZN_CD     2489 non-null   float64\n",
+      " 18  PRRCK_LARG  2489 non-null   float64\n",
+      " 19  SOIL_DRNGE  2418 non-null   float64\n",
+      " 20  LOCTN_GRDN  2686 non-null   float64\n",
+      " 21  ALTTD_CD    2686 non-null   int64  \n",
+      " 22  ACCMA_FOR   2415 non-null   float64\n",
+      " 23  WASH_CD     2415 non-null   float64\n",
+      " 24  SLANT_TYP   2415 non-null   float64\n",
+      " 25  EIGHT_CD    2517 non-null   float64\n",
+      " 26  ROCK_EXDGR  2415 non-null   float64\n",
+      " 27  RIDGE_VS    2686 non-null   int64  \n",
+      " 28  WIND_EXDGR  2415 non-null   float64\n",
+      " 29  WTEFF_DGR   2415 non-null   float64\n",
+      " 30  VLDTY_SLDP  2686 non-null   int64  \n",
+      " 31  SIAFLR_STP  2414 non-null   float64\n",
+      " 32  SIBFLR_STP  2415 non-null   float64\n",
+      " 33  SIAFLR_SLD  2686 non-null   int64  \n",
+      " 34  SIBFLR_SLD  2686 non-null   int64  \n",
+      " 35  SIAFLR_ERC  2414 non-null   float64\n",
+      " 36  SIBFLR_ERC  2415 non-null   float64\n",
+      " 37  SIAFLR_ORM  2414 non-null   float64\n",
+      " 38  SIBFLR_ORM  2415 non-null   float64\n",
+      " 39  SIAFLR_SCS  2414 non-null   float64\n",
+      " 40  SIBFLR_SCS  2415 non-null   float64\n",
+      " 41  SIAFLR_CBS  2414 non-null   float64\n",
+      " 42  SIBFLR_CBS  2415 non-null   float64\n",
+      " 43  SIAFLR_STR  2414 non-null   float64\n",
+      " 44  SIBFLR_STR  2415 non-null   float64\n",
+      " 45  SIAFLR_HGD  2414 non-null   float64\n",
+      " 46  SIBFLR_HGD  2415 non-null   float64\n",
+      " 47  SIAFLR_CNS  2414 non-null   float64\n",
+      " 48  SIBFLR_CNS  2415 non-null   float64\n",
+      " 49  SIAFLR_HYP  2414 non-null   float64\n",
+      " 50  SIAFLR_HER  2414 non-null   float64\n",
+      " 51  SIBFLR_HER  2415 non-null   float64\n",
+      " 52  SIAFLR_SMA  2414 non-null   float64\n",
+      " 53  SIBFLR_SMA  2415 non-null   float64\n",
+      " 54  SIAFLR_MDD  2414 non-null   float64\n",
+      " 55  SIBFLR_MDD  2415 non-null   float64\n",
+      " 56  SIAFLR_LAR  2414 non-null   float64\n",
+      " 57  SIBFLR_LAR  2415 non-null   float64\n",
+      " 58  KOFTR_CD    2646 non-null   float64\n",
+      " 59  TREEHT1     2686 non-null   float64\n",
+      " 60  TREEHT2     2686 non-null   float64\n",
+      " 61  TREEHT3     2686 non-null   float64\n",
+      " 62  TREEHT4     2686 non-null   float64\n",
+      " 63  TREEHT5     2686 non-null   float64\n",
+      " 64  FRAG1       2686 non-null   int64  \n",
+      " 65  FRAG2       2686 non-null   int64  \n",
+      " 66  FRAG3       2686 non-null   int64  \n",
+      " 67  FRAG4       2686 non-null   int64  \n",
+      " 68  FRAG5       2686 non-null   int64  \n",
+      " 69  REAL_STIND  2686 non-null   int64  \n",
+      " 70  INTGR_TYP   2686 non-null   int64  \n",
+      " 71  STQGD_VAL   2686 non-null   int64  \n",
+      " 72  TRHGH_SUM   2686 non-null   float64\n",
+      " 73  TRHGH_AVRG  2686 non-null   float64\n",
+      " 74  TOT_FRAG    2686 non-null   int64  \n",
+      " 75  AVRG_FRAG   2686 non-null   int64  \n",
+      " 76  LARCH_STIN  2686 non-null   int64  \n",
+      " 77  KRPN_STIND  2686 non-null   int64  \n",
+      " 78  GNGN_LCLT   2686 non-null   int64  \n",
+      " 79  CNDST_PINE  2686 non-null   int64  \n",
+      " 80  ACTSM_STIN  2686 non-null   int64  \n",
+      " 81  JBLPN_STIN  2686 non-null   int64  \n",
+      " 82  MAP_NAM     2686 non-null   object \n",
+      " 83  MAP_NUM     2686 non-null   int64  \n",
+      " 84  SD_NM       2686 non-null   object \n",
+      " 85  SD_CD       2686 non-null   int64  \n",
+      "dtypes: float64(47), int64(33), object(6)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
