--- a/04.주소입력_법정동추출_토양_기후.ipynb
+++ b/04.주소입력_법정동추출_토양_기후.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "대상지 : 강원 철원군 갈말읍 군탄리 473-1 ( DMZ일원 화살머리고지 등 유해발굴지 )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -39,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'4783033035'"
+       "'5013025926'"
       ]
      },
      "execution_count": 3,
@@ -71,23 +78,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['EMNDN_CD'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-f819c8134423>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0maddrr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'제주시.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m#전국.csv만들기\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0maddrr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maddrr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0maddrr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maddrr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'EMNDN_CD'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'CLZN_CD'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0maddrr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'읍면동코드'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'기후대코드'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0maddrr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'읍면동코드'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBJD_code\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3028\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3029\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3030\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3031\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3032\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1264\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1265\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1266\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mraise_missing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1267\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1314\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1315\u001b[0m                 \u001b[0mnot_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1316\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{not_found} not in index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1317\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1318\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['EMNDN_CD'] not in index\""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ICT01_11\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (2) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#https://www.forest.go.kr/kfsweb/kfi/kfs/trail/soil.do?mn=NKFS_06_08_02&fileDownload=Y&dataType=/soil/FS_IJ100_50.zip&pblicDataId=PBD0000181&tabs=1&searchSrvc=&subTitle=&searchWrd=&searchCnd=\n",
-    "addrr = pd.read_csv('제주시.csv', sep=',')  #전국.csv만들기\n",
+    "addrr = pd.read_csv('전국.csv', sep=',')  #전국.csv만들기\n",
     "addrr = pd.DataFrame(addrr)\n",
     "addrr = addrr[['EMNDN_CD','CLZN_CD']]\n",
     "addrr.columns = ['읍면동코드','기후대코드']\n",
@@ -109,19 +120,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'gapikey.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-090201c7685e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'gapikey.txt'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mgkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ms_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf'http://apis.data.go.kr/1390802/SoilEnviron/SoilExam/getSoilExamList?serviceKey={gkey}&Page_Size=10&Page_No=1&BJD_Code={BJD_code}'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0ms_result\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_url\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'gapikey.txt'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>산도</th>\n",
+       "      <th>유효인산</th>\n",
+       "      <th>유효규산</th>\n",
+       "      <th>유기물</th>\n",
+       "      <th>마그네슘</th>\n",
+       "      <th>칼륨</th>\n",
+       "      <th>칼슘</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>60</td>\n",
+       "      <td></td>\n",
+       "      <td>159</td>\n",
+       "      <td>.4</td>\n",
+       "      <td>.56</td>\n",
+       "      <td>.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>41</td>\n",
+       "      <td></td>\n",
+       "      <td>125</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>.88</td>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>19</td>\n",
+       "      <td></td>\n",
+       "      <td>182</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>.79</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>50</td>\n",
+       "      <td></td>\n",
+       "      <td>197</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>.63</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>33</td>\n",
+       "      <td></td>\n",
+       "      <td>123</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>.6</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>127</td>\n",
+       "      <td></td>\n",
+       "      <td>162</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>.89</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>51</td>\n",
+       "      <td></td>\n",
+       "      <td>145</td>\n",
+       "      <td>.6</td>\n",
+       "      <td>.44</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td></td>\n",
+       "      <td>116</td>\n",
+       "      <td>.6</td>\n",
+       "      <td>.57</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>94</td>\n",
+       "      <td>.8</td>\n",
+       "      <td>.61</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>45</td>\n",
+       "      <td></td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>.58</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    산도 유효인산 유효규산  유기물 마그네슘   칼륨   칼슘\n",
+       "0  4.5   60       159   .4  .56   .1\n",
+       "1  5.1   41       125  1.1  .88  3.4\n",
+       "2  5.7   19       182  1.3  .79  2.6\n",
+       "3  5.9   50       197  1.4  .63  3.6\n",
+       "4  6.4   33       123  4.1   .6  9.1\n",
+       "5  6.1  127       162  2.1  .89  3.3\n",
+       "6  5.6   51       145   .6  .44  1.5\n",
+       "7    6   14       116   .6  .57  1.4\n",
+       "8  5.9   10        94   .8  .61  1.9\n",
+       "9  5.6   45       148    1  .58  1.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,10 +293,9 @@
     "posifert_mg = []\n",
     "posifert_k = []\n",
     "posifert_ca = []\n",
-    "selc= []\n",
     "\n",
-    "lis = [acid, vldpha, vldsia, om, posifert_mg, posifert_k, posifert_ca, selc]\n",
-    "cons = ['acid', 'vldpha', 'vldsia', 'om', 'posifert_mg', 'posifert_k', 'posifert_ca', 'selc']\n",
+    "lis = [acid, vldpha, vldsia, om, posifert_mg, posifert_k, posifert_ca]\n",
+    "cons = ['acid', 'vldpha', 'vldsia', 'om', 'posifert_mg', 'posifert_k', 'posifert_ca']\n",
     "\n",
     "for li in lis:\n",
     "    for con in cons:\n",
@@ -151,16 +303,161 @@
     "            for a in s_soup.find_all(con):\n",
     "                li.append(float(a.get_text()))\n",
     "\n",
-    "ground_con = pd.DataFrame({'산도':acid, '유효인산':vldpha, '유효규산':vldsia, '유기물':om, '마그네슘':posifert_mg, '칼륨':posifert_k , '칼슘':posifert_ca, '전기전도도':selc})\n",
+    "ground_con = pd.DataFrame({'산도':acid, '유효인산':vldpha, '유효규산':vldsia, '유기물':om, '마그네슘':posifert_mg, '칼륨':posifert_k , '칼슘':posifert_ca})\n",
     "ground_con"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 토양 유형 api << 쓰지 말자!! >>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "from urllib.parse import quote\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('soil_type_key.txt') as file:\n",
+    "    type_key = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://apis.data.go.kr/1390802/SoilEnviron/SoilCharac2/getSoilCharacter2?serviceKey=MAW83St0u7MX4NvrMdB3L815EvMa%2Bl5IQE2mS8jMIHr49AXVHFmUbSzGp%2FqZEk3C2ckB5UcIgajRm8%2BreDnYEg%3D%3D&PNU_Code=4215034022100050000'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = f'http://apis.data.go.kr/1390802/SoilEnviron/SoilCharac2/getSoilCharacter2?serviceKey={type_key}&PNU_Code=4215034022100050000'\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = requests.get(url)\n",
+    "content = result.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<response>\n",
+      "<header>\n",
+      "<result_code>200</result_code>\n",
+      "<result_msg>OK</result_msg>\n",
+      "</header>\n",
+      "<body>\n",
+      "<items>\n",
+      "<item>\n",
+      "<pnu_code>4215034022100050000</pnu_code>\n",
+      "<soil_color_code>08</soil_color_code>\n",
+      "<deepsoil_qlt_code>04</deepsoil_qlt_code>\n",
+      "<soil_structure_code>04</soil_structure_code>\n",
+      "<deepsoil_color_code>01</deepsoil_color_code>\n",
+      "<deepsoil_ston_code>02</deepsoil_ston_code> <soilslope_code>03</soilslope_code>\n",
+      "<matrix_code>04</matrix_code>\n",
+      "<soildra_code>02</soildra_code>\n",
+      "<vldsoildep_code>03</vldsoildep_code>\n",
+      "<erosion_code>01</erosion_code>\n",
+      "<surtture_code>04</surtture_code>\n",
+      "<sur_ston_code>02</sur_ston_code>\n",
+      "<soil_type_geo_code>04</soil_type_geo_code>\n",
+      "<accu_style_code>03</accu_style_code>\n",
+      "<main_order_code>06</main_order_code>\n",
+      "<sub_order_code>12</sub_order_code>\n",
+      "<grategroup_code>26</grategroup_code>\n",
+      "<main_landuse_code>02</main_landuse_code>\n",
+      "<soil_use_rec_code>02</soil_use_rec_code>\n",
+      "<soil_type_code>07</soil_type_code>\n",
+      "<rfld_grd_code>04</rfld_grd_code>\n",
+      "<paddy_factor_code>02</paddy_factor_code>\n",
+      "<pfld_grd_code>03</pfld_grd_code>\n",
+      "<upland_factor_code>02</upland_factor_code>\n",
+      "<fruit_grd_code>02</fruit_grd_code>\n",
+      "<fruit_factor_code>02</fruit_factor_code>\n",
+      "<pasture_grd_code>01</pasture_grd_code>\n",
+      "<grass_factor_code>01</grass_factor_code>\n",
+      "<frst_grd_code>01</frst_grd_code>\n",
+      "<forest_factor_code>01</forest_factor_code>\n",
+      "</item>\n",
+      "</items>\n",
+      "</body>\n",
+      "</response>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(content, 'html.parser')       # parser: 구문분석기, 원하는 형태로 만들어주기 \n",
+    "print(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07\n"
+     ]
+    }
+   ],
+   "source": [
+    "soups = soup.find('soil_type_code')\n",
+    "print(soups.string)\n",
+    " \n",
+    "# 07 : 밭, 보통전 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 지번코드 -> \n",
+    "# 자생식물 주소-> 지번코드 \n",
+    "# "
+   ]
   }
  ],
  "metadata": {
