--- a/04.주소입력_법정동추출_토양_기후.ipynb
+++ b/04.주소입력_법정동추출_토양_기후.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5013025926'"
+       "'4278025624'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "2.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,6 @@
        "      <th></th>\n",
        "      <th>산도</th>\n",
        "      <th>유효인산</th>\n",
-       "      <th>유효규산</th>\n",
        "      <th>유기물</th>\n",
        "      <th>마그네슘</th>\n",
        "      <th>칼륨</th>\n",
@@ -156,123 +155,113 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>60</td>\n",
-       "      <td></td>\n",
-       "      <td>159</td>\n",
-       "      <td>.4</td>\n",
-       "      <td>.56</td>\n",
-       "      <td>.1</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>49</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>.43</td>\n",
+       "      <td>5.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>41</td>\n",
-       "      <td></td>\n",
-       "      <td>125</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>.88</td>\n",
-       "      <td>3.4</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>.26</td>\n",
+       "      <td>4.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5.7</td>\n",
-       "      <td>19</td>\n",
-       "      <td></td>\n",
-       "      <td>182</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>.79</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>56.1</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>.37</td>\n",
+       "      <td>3.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>50</td>\n",
-       "      <td></td>\n",
-       "      <td>197</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>.63</td>\n",
-       "      <td>3.6</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>.5</td>\n",
+       "      <td>7.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>33</td>\n",
-       "      <td></td>\n",
-       "      <td>123</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>.6</td>\n",
-       "      <td>9.1</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>.75</td>\n",
+       "      <td>8.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6.1</td>\n",
-       "      <td>127</td>\n",
-       "      <td></td>\n",
-       "      <td>162</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>.89</td>\n",
-       "      <td>3.3</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>.41</td>\n",
+       "      <td>6.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>51</td>\n",
-       "      <td></td>\n",
-       "      <td>145</td>\n",
-       "      <td>.6</td>\n",
-       "      <td>.44</td>\n",
-       "      <td>1.5</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>141.1</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>.69</td>\n",
+       "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>14</td>\n",
-       "      <td></td>\n",
-       "      <td>116</td>\n",
-       "      <td>.6</td>\n",
-       "      <td>.57</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>138.3</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>.64</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>10</td>\n",
-       "      <td></td>\n",
-       "      <td>94</td>\n",
-       "      <td>.8</td>\n",
-       "      <td>.61</td>\n",
+       "      <td>6</td>\n",
+       "      <td>224.4</td>\n",
+       "      <td>37.9</td>\n",
        "      <td>1.9</td>\n",
+       "      <td>.96</td>\n",
+       "      <td>8.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>45</td>\n",
-       "      <td></td>\n",
-       "      <td>148</td>\n",
-       "      <td>1</td>\n",
-       "      <td>.58</td>\n",
-       "      <td>1.5</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>54.1</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>.49</td>\n",
+       "      <td>6.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    산도 유효인산 유효규산  유기물 마그네슘   칼륨   칼슘\n",
-       "0  4.5   60       159   .4  .56   .1\n",
-       "1  5.1   41       125  1.1  .88  3.4\n",
-       "2  5.7   19       182  1.3  .79  2.6\n",
-       "3  5.9   50       197  1.4  .63  3.6\n",
-       "4  6.4   33       123  4.1   .6  9.1\n",
-       "5  6.1  127       162  2.1  .89  3.3\n",
-       "6  5.6   51       145   .6  .44  1.5\n",
-       "7    6   14       116   .6  .57  1.4\n",
-       "8  5.9   10        94   .8  .61  1.9\n",
-       "9  5.6   45       148    1  .58  1.5"
+       "    산도   유효인산   유기물 마그네슘   칼륨   칼슘\n",
+       "0  5.6     49  25.9  1.1  .43  5.7\n",
+       "1  4.9   25.5  16.9    1  .26  4.8\n",
+       "2  5.7   56.1  22.8  1.2  .37  3.5\n",
+       "3  5.6   53.8  26.2    4   .5  7.3\n",
+       "4  6.2   63.4  20.3  3.8  .75  8.2\n",
+       "5  6.1   84.2  26.9  1.8  .41  6.8\n",
+       "6  5.9  141.1  35.4  1.4  .69  5.8\n",
+       "7  6.1  138.3  30.3  2.1  .64    9\n",
+       "8    6  224.4  37.9  1.9  .96  8.1\n",
+       "9  5.3   54.1  31.4  1.6  .49  6.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,156 +290,20 @@
     "    for con in cons:\n",
     "        if lis.index(li) == cons.index(con):\n",
     "            for a in s_soup.find_all(con):\n",
-    "                li.append(float(a.get_text()))\n",
+    "                li.append(a.get_text())\n",
     "\n",
-    "ground_con = pd.DataFrame({'산도':acid, '유효인산':vldpha, '유효규산':vldsia, '유기물':om, '마그네슘':posifert_mg, '칼륨':posifert_k , '칼슘':posifert_ca})\n",
+    "ground_con = pd.DataFrame({'산도':acid, '유효인산':vldpha, '유기물':om, '마그네슘':posifert_mg, '칼륨':posifert_k , '칼슘':posifert_ca})\n",
     "ground_con"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- 토양 유형 api << 쓰지 말자!! >>"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from urllib.parse import quote\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('soil_type_key.txt') as file:\n",
-    "    type_key = file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://apis.data.go.kr/1390802/SoilEnviron/SoilCharac2/getSoilCharacter2?serviceKey=MAW83St0u7MX4NvrMdB3L815EvMa%2Bl5IQE2mS8jMIHr49AXVHFmUbSzGp%2FqZEk3C2ckB5UcIgajRm8%2BreDnYEg%3D%3D&PNU_Code=4215034022100050000'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url = f'http://apis.data.go.kr/1390802/SoilEnviron/SoilCharac2/getSoilCharacter2?serviceKey={type_key}&PNU_Code=4215034022100050000'\n",
-    "url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = requests.get(url)\n",
-    "content = result.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "<response>\n",
-      "<header>\n",
-      "<result_code>200</result_code>\n",
-      "<result_msg>OK</result_msg>\n",
-      "</header>\n",
-      "<body>\n",
-      "<items>\n",
-      "<item>\n",
-      "<pnu_code>4215034022100050000</pnu_code>\n",
-      "<soil_color_code>08</soil_color_code>\n",
-      "<deepsoil_qlt_code>04</deepsoil_qlt_code>\n",
-      "<soil_structure_code>04</soil_structure_code>\n",
-      "<deepsoil_color_code>01</deepsoil_color_code>\n",
-      "<deepsoil_ston_code>02</deepsoil_ston_code> <soilslope_code>03</soilslope_code>\n",
-      "<matrix_code>04</matrix_code>\n",
-      "<soildra_code>02</soildra_code>\n",
-      "<vldsoildep_code>03</vldsoildep_code>\n",
-      "<erosion_code>01</erosion_code>\n",
-      "<surtture_code>04</surtture_code>\n",
-      "<sur_ston_code>02</sur_ston_code>\n",
-      "<soil_type_geo_code>04</soil_type_geo_code>\n",
-      "<accu_style_code>03</accu_style_code>\n",
-      "<main_order_code>06</main_order_code>\n",
-      "<sub_order_code>12</sub_order_code>\n",
-      "<grategroup_code>26</grategroup_code>\n",
-      "<main_landuse_code>02</main_landuse_code>\n",
-      "<soil_use_rec_code>02</soil_use_rec_code>\n",
-      "<soil_type_code>07</soil_type_code>\n",
-      "<rfld_grd_code>04</rfld_grd_code>\n",
-      "<paddy_factor_code>02</paddy_factor_code>\n",
-      "<pfld_grd_code>03</pfld_grd_code>\n",
-      "<upland_factor_code>02</upland_factor_code>\n",
-      "<fruit_grd_code>02</fruit_grd_code>\n",
-      "<fruit_factor_code>02</fruit_factor_code>\n",
-      "<pasture_grd_code>01</pasture_grd_code>\n",
-      "<grass_factor_code>01</grass_factor_code>\n",
-      "<frst_grd_code>01</frst_grd_code>\n",
-      "<forest_factor_code>01</forest_factor_code>\n",
-      "</item>\n",
-      "</items>\n",
-      "</body>\n",
-      "</response>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(content, 'html.parser')       # parser: 구문분석기, 원하는 형태로 만들어주기 \n",
-    "print(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "07\n"
-     ]
-    }
-   ],
-   "source": [
-    "soups = soup.find('soil_type_code')\n",
-    "print(soups.string)\n",
-    " \n",
-    "# 07 : 밭, 보통전 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
